Se agregan funciones para calculo de notas ponderadas
